Segunda prueba movil

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="plan">
         <div class="meta" data-imagen="m1.jpg">
-            <div class="fecha">09<span>/19</span></div>
+            <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>SuperTech I</h2>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m2.jpg">
-            <div class="fecha">09<span>/19</span></div>
+            <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Encontrar Trabajo</h2>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m3.jpg">
-            <div class="fecha">09<span>/19</span></div>
+            <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Aprender Laravel</h2>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m3-2.jpg">
-            <div class="fecha">10<span>/19</span></div>
+            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Sistema de Tickets para Soporte de Clientes en Empresas</h2>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m4.jpg">
-            <div class="fecha">10<span>/19</span></div>
+            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Quantum Systems</h2>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m5.jpg">
-            <div class="fecha">10<span>/19</span></div>
+            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Quantum Systems para el Sector Salud</h2>
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m6.jpg">
-            <div class="fecha">10<span>/19</span></div>
+            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Quantum Systems para el Sector Educación</h2>
@@ -100,7 +100,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m7.jpg">
-            <div class="fecha">10<span>/19</span></div>
+            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Quantum Systems para el Sector Financiero</h2>
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m8.jpg">
-            <div class="fecha">10<span>/19</span></div>
+            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Quantum Systems para el Comercio</h2>
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m9.jpg">
-            <div class="fecha">10<span>/19</span></div>
+            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Plataforma Historial Médico con Laravel</h2>
@@ -133,7 +133,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m10.jpg">
-            <div class="fecha">11<span>/19</span></div>
+            <div class="fecha">11<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Aprender sobre Facturación Electrónica</h2>
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m11.jpg">
-            <div class="fecha">12<span>/19</span></div>
+            <div class="fecha">12<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Historial Médico MultiClínica con Laravel</h2>
@@ -155,7 +155,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m12.jpg">
-            <div class="fecha">01<span>/20</span></div>
+            <div class="fecha">01<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>SuperTech II</h2>
@@ -165,7 +165,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m13.jpg">
-            <div class="fecha">01<span>/20</span></div>
+            <div class="fecha">01<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Aprender flutter</h2>
@@ -176,7 +176,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m14.jpg">
-            <div class="fecha">01<span>/20</span></div>
+            <div class="fecha">01<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Diseñar y construir el Amueblado del Cuarto</h2>
@@ -187,7 +187,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m14-2.jpg">
-            <div class="fecha">01<span>/20</span></div>
+            <div class="fecha">01<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Plataforma de Cursos Online</h2>
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m15.jpg">
-            <div class="fecha">03<span>/20</span></div>
+            <div class="fecha">03<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Plataforma Historial Médico Global</h2>
@@ -209,7 +209,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m16.jpg">
-            <div class="fecha">03<span>/20</span></div>
+            <div class="fecha">03<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Plataforma para bufet de Contadores</h2>
@@ -220,7 +220,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m17.jpg">
-            <div class="fecha">03<span>/20</span></div>
+            <div class="fecha">03<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Adquirir Anteojos y Exámen de la Vista</h2>
@@ -231,7 +231,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m18.jpg">
-            <div class="fecha">04<span>/20</span></div>
+            <div class="fecha">04<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Crear una Agencia de Marketing Digital</h2>
@@ -242,7 +242,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m19.jpg">
-            <div class="fecha">06<span>/20</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Adquirir Cámara</h2>
@@ -253,7 +253,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m20.jpg">
-            <div class="fecha">06<span>/20</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Adquirir Laptop</h2>
@@ -264,7 +264,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m21.jpg">
-            <div class="fecha">06<span>/20</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Adquirir Micrófono de Solapa</h2>
@@ -275,7 +275,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m22.jpg">
-            <div class="fecha">06<span>/20</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Crear el producto Tienda Online para el área de Comercio de Quantum Systems</h2>
@@ -286,7 +286,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m23.jpg">
-            <div class="fecha">06<span>/20</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Transformación Física</h2>
@@ -297,7 +297,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m24.jpg">
-            <div class="fecha">06<span>/20</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Empezar con el Canal Fitness y sus respectivas páginas en otras plataformas</h2>
@@ -308,7 +308,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m25.jpg">
-            <div class="fecha">06<span>/20</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Aprender a Nadar</h2>
@@ -319,7 +319,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m26.jpg">
-            <div class="fecha">09<span>/20</span></div>
+            <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Adquirir Tablet</h2>
@@ -330,7 +330,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m27.jpg">
-            <div class="fecha">09<span>/20</span></div>
+            <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Adquirir Cámara 360</h2>
@@ -341,7 +341,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m28.jpg">
-            <div class="fecha">09<span>/20</span></div>
+            <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Sistema que funcione como POS, Inventario y que Facture</h2>
@@ -352,7 +352,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m29.jpg">
-            <div class="fecha">12<span>/20</span></div>
+            <div class="fecha">12<span><span class="diagonal">/</span><span class="fecha-movil">20</span>20</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Comprar Computadora de Escritorio</h2>
@@ -363,7 +363,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m30.jpg">
-            <div class="fecha">01<span>/21</span></div>
+            <div class="fecha">01<span><span class="diagonal">/</span><span class="fecha-movil">20</span>21</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Creación de Canal Futuro</h2>
@@ -374,7 +374,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m31.jpg">
-            <div class="fecha">01<span>/21</span></div>
+            <div class="fecha">01<span><span class="diagonal">/</span><span class="fecha-movil">20</span>21</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Plataforma de ventas para muebles</h2>
@@ -385,7 +385,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m32.jpg">
-            <div class="fecha">01<span>/21</span></div>
+            <div class="fecha">01<span><span class="diagonal">/</span><span class="fecha-movil">20</span>21</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Plataforma para la Gestión de Colegios</h2>
@@ -396,7 +396,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m33.jpg">
-            <div class="fecha">06<span>/21</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>21</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Tienda de Ropa Online</h2>
@@ -407,7 +407,7 @@
             </div>
         </div>
         <div class="meta" data-imagen="m34.jpg">
-            <div class="fecha">06<span>/21</span></div>
+            <div class="fecha">06<span><span class="diagonal">/</span><span class="fecha-movil">20</span>21</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
                 <h2>Creación de Red Social Fitness</h2>
