--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </p>
             </div>
         </div>
-        <div class="meta" data-imagen="m4.jpg">
+        <div class="meta hecho" data-imagen="m4.jpg">
             <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
@@ -66,7 +66,7 @@
                 </p>
             </div>
         </div>
-        <div class="meta" data-imagen="m5.jpg">
+        <div class="meta hecho" data-imagen="m5.jpg">
             <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
@@ -77,7 +77,7 @@
                 </p>
             </div>
         </div>
-        <div class="meta" data-imagen="m6.jpg">
+        <div class="meta hecho" data-imagen="m6.jpg">
             <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
@@ -88,7 +88,7 @@
                 </p>
             </div>
         </div>
-        <div class="meta" data-imagen="m7.jpg">
+        <div class="meta hecho" data-imagen="m7.jpg">
             <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
@@ -99,7 +99,7 @@
                 </p>
             </div>
         </div>
-        <div class="meta" data-imagen="m8.jpg">
+        <div class="meta hecho" data-imagen="m8.jpg">
             <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
