--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
             </div>
         </div>
-        <div class="meta" data-imagen="m2.jpg">
+        <div class="meta hecho" data-imagen="m2.jpg">
             <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
@@ -110,17 +110,6 @@
                 </p>
             </div>
         </div>
-        <div class="meta" data-imagen="m32.jpg">
-            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
-            <div class="grafico"><div class="line"></div></div>
-            <div class="desc">
-                <h2>Plataforma para la Gestión de Colegios</h2>
-                <p>Crear una plataforma de gestión de colegios que tenga la capacidad de asistencia, clases online, videoconferencias, chat, pagos en línea, y demás cosas que se identifiquen como necesarias para crear la mejor plataforma de gestión escolar de Guatemala, además ofertarla para el ciclo escolar 2022.
-                    <br><br>
-                    <b>Duración estimada: 6 meses</b>
-                </p>
-            </div>
-        </div>
         <div class="meta" data-imagen="m10.jpg">
             <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
@@ -151,6 +140,17 @@
                 <p>Desarrollar o conseguir un sistema de tickets para soporte al cliente.
                     <br><br>
                     <b>Duración estimada: 1 mes</b>
+                </p>
+            </div>
+        </div>
+        <div class="meta" data-imagen="m32.jpg">
+            <div class="fecha">11<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
+            <div class="grafico"><div class="line"></div></div>
+            <div class="desc">
+                <h2>Plataforma para la Gestión de Colegios</h2>
+                <p>Crear una plataforma de gestión de colegios que tenga la capacidad de asistencia, clases online, videoconferencias, chat, pagos en línea, y demás cosas que se identifiquen como necesarias para crear la mejor plataforma de gestión escolar de Guatemala, además ofertarla para el ciclo escolar 2022.
+                    <br><br>
+                    <b>Duración estimada: 6 meses</b>
                 </p>
             </div>
         </div>
