--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <b>Duración estimada: 1 mes</b></p>
             </div>
         </div>
-        <div class="meta" data-imagen="m3.jpg">
+        <div class="meta hecho" data-imagen="m3.jpg">
             <div class="fecha">09<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
@@ -121,23 +121,12 @@
                 </p>
             </div>
         </div>
-        <div class="meta" data-imagen="m18.jpg">
+        <div class="meta" data-imagen="m10.jpg">
             <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
             <div class="grafico"><div class="line"></div></div>
             <div class="desc">
-                <h2>Crear una Agencia de Marketing Digital</h2>
-                <p>Crear una agencia de marketing digital con la ayuda de Joshua.
-                    <br><br>
-                    <b>Duración estimada: 1 mes</b>
-                </p>
-            </div>
-        </div>
-        <div class="meta" data-imagen="m3-2.jpg">
-            <div class="fecha">10<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
-            <div class="grafico"><div class="line"></div></div>
-            <div class="desc">
-                <h2>Sistema de Tickets para Soporte de Clientes en Empresas</h2>
-                <p>Desarrollar o conseguir un sistema de tickets para soporte al cliente.
+                <h2>Crear el primer paso para "FreshFoods Express"</h2>
+                <p>Desarrollar un supermercado en línea basado en ecommerce, cotizar y comparar precios de los diferentes competidores, para establecer precios propios, no olvidar que esto pasara a ser un sistema mas completo que se adapte mejor al mercado y nos permita mas eficiencia.
                     <br><br>
                     <b>Duración estimada: 1 mes</b>
                 </p>
@@ -151,6 +140,28 @@
                 <p>Crear una plataforma de gestión de colegios que tenga la capacidad de asistencia, clases online, videoconferencias, chat, pagos en línea, y demás cosas que se identifiquen como necesarias para crear la mejor plataforma de gestión escolar de Guatemala, además ofertarla para el ciclo escolar 2022.
                     <br><br>
                     <b>Duración estimada: 6 meses</b>
+                </p>
+            </div>
+        </div>
+        <div class="meta" data-imagen="m18.jpg">
+            <div class="fecha">11<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
+            <div class="grafico"><div class="line"></div></div>
+            <div class="desc">
+                <h2>Crear una Agencia de Marketing Digital</h2>
+                <p>Crear una agencia de marketing digital con la ayuda de Joshua.
+                    <br><br>
+                    <b>Duración estimada: 1 mes</b>
+                </p>
+            </div>
+        </div>
+        <div class="meta" data-imagen="m3-2.jpg">
+            <div class="fecha">12<span><span class="diagonal">/</span><span class="fecha-movil">20</span>19</span></div>
+            <div class="grafico"><div class="line"></div></div>
+            <div class="desc">
+                <h2>Sistema de Tickets para Soporte de Clientes en Empresas</h2>
+                <p>Desarrollar o conseguir un sistema de tickets para soporte al cliente.
+                    <br><br>
+                    <b>Duración estimada: 1 mes</b>
                 </p>
             </div>
         </div>
